terraform/eip.tf
# #==================================================
# # EIP
# #==================================================
# resource "aws_eip" "diglive_public_1a" {
#   vpc = true
#   depends_on = [aws_internet_gateway.diglive]
# }

# resource "aws_eip" "diglive_public_1c" {
#   vpc = true
#   depends_on = [aws_internet_gateway.diglive]
# }
